<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juand.cleverhome.ledControl">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/onLed"
        android:id="@+id/btnOn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#4CAF50"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/offLed"
        android:id="@+id/btnOff"
        android:layout_below="@+id/btnOn"
        android:layout_alignEnd="@+id/btnOn"
        android:layout_marginTop="10dp"
        android:background="#F44336"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconect"
        android:id="@+id/btnDis"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnOff"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:background="#7c4dff" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/brightness"
        android:id="@+id/textView"
        android:layout_below="@+id/btnDis"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Temperatura:"
        android:id="@+id/temp"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/temp"
        android:textSize="44sp"
        android:gravity="center_vertical|right"
        android:padding="20dp"
        android:background="#3498db"
        android:textColor="#ffffff"
        android:id="@+id/textView2"
        android:elevation="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mostrar"
        android:id="@+id/btntemp"
        android:background="#34495e"
        android:textColor="#ffffff"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true" />

</RelativeLayout>
