<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juand.cleverhome.MainActivity"
    android:orientation="vertical">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/bluetoothTab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titularbluetooth"
                        android:textSize="22sp"
                        android:gravity="center_vertical|right"
                        android:padding="20dp"
                        android:background="#1976D2"
                        android:textColor="#ffffff"
                        android:id="@+id/titularBluetooth"
                        android:elevation="10dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/lbldevices"
                        android:background="#03A9FA"
                        android:textColor="#ffffff"
                        android:elevation="5dp"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        />
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="103dp"
                        android:id="@+id/deviceList"
                        android:layout_weight="0.22">
                    </ListView>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="76dp"
                        android:text="@string/showdevices"
                        android:id="@+id/showButton"
                        android:background="#2ecc71"
                        android:textColor="#ffffff" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ethernetTab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"></LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
